# poc-project-python

./: LAB_TESTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
scripts/: check_canary.py
src/strutils/: __init__.py  core.py
tests/: test_core.py
